[package]
name = "fixPath"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
glob = "0.3"

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
memmap2 = "0.9.4"
colored = "2.1.0"

[dependencies.object]
features = ["write", "xcoff", "read", "all"]
path = "object"
#git = "https://github.com/nixcloud/object.git"
#branch = "fixPath"
