[package]
name = "fixPath"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
memmap2 = "0.9.4"
colored = "2.1.0"
once_cell = "1.19.0"
anyhow = "1.0.86"

[dependencies.object]
features = ["write", "xcoff", "read", "all"]
git = "https://github.com/nixcloud/object.git"
branch = "fixPath-0.1.0"

[dev-dependencies]
glob = "0.3.1"
